methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:2: error: illegal start of simple pattern
  for (var compt : Int <-1 to 4) {
       ^MethodsDogHouse:7: error: '<-' expected but '}' found.
}
^